@@ -1,3 +1,7 @@
+20210416:
+  * [gfursin] extended module:package to ask a user to select a variation 
+    for a given package when there are multiple versions available.
+
 20210414:
   * regular aggregation of the CK components from the community
 
